--- a/index.html
+++ b/index.html
@@ -564,14 +564,13 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item text-center rounded overflow-hidden">
                             <div class="rounded-circle overflow-hidden m-4">
-                                <img class="img-fluid" src="img/team-3.jpg" alt="">
+                                <img class="img-fluid" src="img/maggie.png" alt="">
                             </div>
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Maggie Stewart</h5>
+                            <small> Team Lead & Frontend Web Developer </small>
                             <div class="d-flex justify-content-center mt-3">
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-square btn-primary mx-1" href="www.linkedin.com/in/maggiestewart225"><i class="fab fa-linkedin"></i></a>
+                                <a class="btn btn-square btn-primary mx-1" href="https://github.com/maggiestewart"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
