--- a/index.html
+++ b/index.html
@@ -922,22 +922,22 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
               <div class="team-item text-center rounded overflow-hidden">
                 <div class="rounded-circle overflow-hidden m-4">
-                  <img class="img-fluid" src="img/CameronCourtois.png" alt="" />
+                  <img class="img-fluid" src="img/CameronC.png" alt="" />
                 </div>
                 <h5 class="mb-0">Cameron Courtois</h5>
                 <small>Mockups & Frontend Web Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a
+                    <a
                     class="btn btn-square btn-primary mx-1"
                     href="www.linkedin.com/in/
                     cameron-courtois-1976a41a4"
                     ><i class="fab fa-linkedin"></i
-                  ></a>
-                  <a
+                    ></a>
+                    <a
                     class="btn btn-square btn-primary mx-1"
-                    href="https://github.com/CamCourtois"
+                    href="https://github.com/maggiestewart"
                     ><i class="fab fa-github"></i
-                  ></a>
+                    ></a>
                 </div>
               </div>
             </div>
