--- a/index.html
+++ b/index.html
@@ -963,19 +963,18 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
               <div class="team-item text-center rounded overflow-hidden">
                 <div class="rounded-circle overflow-hidden m-4">
-                  <img class="img-fluid" src="img/team-2.jpg" alt="" />
+                  <img class="img-fluid" src="img/KyleM.jpg" alt="" />
                 </div>
-                <h5 class="mb-0">Full Name</h5>
-                <small>Designation</small>
+                <h5 class="mb-0">Kyle McCraine</h5>
+                <small>Backend & Database Developers</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
+                  <a class="btn btn-square btn-primary mx-1" 
+                  href="https://www.linkedin.com/in/kyle-mccraine-723890215"
+                    ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-instagram"></i
+                  <a class="btn btn-square btn-primary mx-1" 
+                  href="https://github.com/Kcmac012"
+                    ><i class="fab fa-github"></i
                   ></a>
                 </div>
               </div>
