Updated Team Section
Josh information now on the website.

--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
                   <img class="img-fluid" src="img/KyleM.jpg" alt="" />
                 </div>
                 <h5 class="mb-0">Kyle McCraine</h5>
-                <small>Backend & Database Developers</small>
+                <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
                   <a class="btn btn-square btn-primary mx-1" 
                   href="https://www.linkedin.com/in/kyle-mccraine-723890215"
@@ -985,7 +985,7 @@
                   <img class="img-fluid" src="img/Michael_Carroll.jpg" alt="" />
                 </div>
                 <h5 class="mb-0">Michael Carroll</h5>
-                <small>Backend and Database Developers</small>
+                <small>Backend and Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
                   <a class="btn btn-square btn-primary mx-1" 
                   href="https://www.linkedin.com/in/michael-carroll-0a4a14254/"
@@ -1001,19 +1001,18 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
               <div class="team-item text-center rounded overflow-hidden">
                 <div class="rounded-circle overflow-hidden m-4">
-                  <img class="img-fluid" src="img/team-4.jpg" alt="" />
+                  <img class="img-fluid" src="img/josh.jpg" alt="" />
                 </div>
-                <h5 class="mb-0">Full Name</h5>
-                <small>Designation</small>
+                <h5 class="mb-0">Joshua McCain</h5>
+                <small>Backend and Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
+                  <a class="btn btn-square btn-primary mx-1" 
+                  href="https://www.linkedin.com/in/joshua-mccain-665862264/"
+                    ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-instagram"></i
+                  <a class="btn btn-square btn-primary mx-1"
+                  href="https://github.com/Joshua-McCain"
+                    ><i class="fab fa-github"></i
                   ></a>
                 </div>
               </div>
