--- a/index.html
+++ b/index.html
@@ -1020,19 +1020,16 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <div class="team-item text-center rounded overflow-hidden">
                 <div class="rounded-circle overflow-hidden m-4">
-                  <img class="img-fluid" src="img/team-1.jpg" alt="" />
+                  <img class="img-fluid" src="img/Olivia.jpg" alt="" />
                 </div>
-                <h5 class="mb-0">Full Name</h5>
-                <small>Designation</small>
+                <h5 class="mb-0">Olivia Cheung</h5>
+                <small>UI/UX Design</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-facebook-f"></i
+                  <a class="btn btn-square btn-primary mx-1" href="https://www.linkedin.com/in/o-cheung/"
+                    ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-primary mx-1" href=""
-                    ><i class="fab fa-instagram"></i
+                  <a class="btn btn-square btn-primary mx-1" href="https://github.com/Olivia-Cheung"
+                    ><i class="fab fa-github"></i
                   ></a>
                 </div>
               </div>
