Fixed links; added actual descriptions to main sections

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
             <div class="row align-items-center g-5">
               <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-3 text-white animated slideInLeft">
-                  Enjoy Our<br />Delicious Meal
+                   Welcome! <br />
                 </h1>
                 <p class="text-white animated slideInLeft mb-4 pb-2">
-                  Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                  Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                  sed stet lorem sit clita duo justo magna dolore erat amet
+                  Join us on our culinary journey and discover the flavors of the world right here in our cozy restaurant.
+                  From classic dishes to contemporary creations, each item on our menu is a testament to our dedication to providing our
+                  customers with the best culinary experience possible.
                 </p>
               </div>
               <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -121,8 +121,9 @@
                     <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
                     <h5>Master Chefs</h5>
                     <p>
-                      Diam elitr kasd sed at elitr sed ipsum justo dolor sed
-                      clita amet diam
+                      Our chefs bring unique flair and expertise to
+                      the kitchen, crafting delicious and unforgettable dishes
+                      that keep customers coming back
                     </p>
                   </div>
                 </div>
@@ -133,8 +134,8 @@
                     <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
                     <h5>Quality Food</h5>
                     <p>
-                      Diam elitr kasd sed at elitr sed ipsum justo dolor sed
-                      clita amet diam
+                      Using only the freshest and finest ingredients, sourced from local and premium
+                      suppliers, to ensure that every dish is of the highest quality
                     </p>
                   </div>
                 </div>
@@ -145,8 +146,8 @@
                     <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
                     <h5>Online Order</h5>
                     <p>
-                      Diam elitr kasd sed at elitr sed ipsum justo dolor sed
-                      clita amet diam
+                      Enjoy your favorite international dishes from the comfort of your home
+                      or office with our simple online ordering system
                     </p>
                   </div>
                 </div>
@@ -157,8 +158,8 @@
                     <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                     <h5>24/7 Service</h5>
                     <p>
-                      Diam elitr kasd sed at elitr sed ipsum justo dolor sed
-                      clita amet diam
+                      Our customer support team is available 24/7 to answer any of your questions
+                      or concerns about our products and orders
                     </p>
                   </div>
                 </div>
@@ -213,19 +214,22 @@
                 About Us
               </h5>
               <h1 class="mb-4">
-                Welcome to
-                <i class="fa fa-utensils text-primary me-2"></i>Restoran
+                Welcome to Bytes Abroad
               </h1>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet
-                lorem sit.
+                We are a team of passionate chefs and culinary experts, dedicated to providing our customers with a unique
+                and unforgettable dining experience. Our menu offers a diverse range of international flavors and dishes,
+                carefully crafted with the freshest and highest quality ingredients.
               </p>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
+                We pride ourselves on our commitment to quality and consistency, ensuring that every dish is prepared to
+                perfection and meets the expectations of our diners. Whatever your cravings are, our team of
+                chefs will create a culinary masterpiece that will satisfy your taste buds.
               </p>
+              <p class="mb-4">
+                Thank you for choosing Bytes Abroad. We look forward to serving you and providing you with an unforgettable culinary experience.
+              </p>
+
               <div class="row g-4 mb-4">
                 <div class="col-sm-6">
                   <div
@@ -235,7 +239,7 @@
                       class="flex-shrink-0 display-5 text-primary mb-0"
                       data-toggle="counter-up"
                     >
-                      15
+                      4
                     </h1>
                     <div class="ps-4">
                       <p class="mb-0">Years of</p>
@@ -251,7 +255,7 @@
                       class="flex-shrink-0 display-5 text-primary mb-0"
                       data-toggle="counter-up"
                     >
-                      50
+                      10
                     </h1>
                     <div class="ps-4">
                       <p class="mb-0">Popular</p>
@@ -884,7 +888,7 @@
                   <img class="img-fluid" src="img/steven.png" alt="" />
                 </div>
                 <h5 class="mb-0">Steven Seiden</h5>
-                <small>Front End Web Developer</small>
+                <small>Frontend Web Developer</small>
                 <div class="d-flex justify-content-center mt-3">
                   <a class="btn btn-square btn-primary mx-1" href=""
                     ><i class="fab fa-facebook-f"></i
@@ -908,7 +912,7 @@
                 <div class="d-flex justify-content-center mt-3">
                   <a
                     class="btn btn-square btn-primary mx-1"
-                    href="www.linkedin.com/in/maggiestewart225"
+                    href="https://www.linkedin.com/in/maggiestewart225"
                     ><i class="fab fa-linkedin"></i
                   ></a>
                   <a
@@ -929,13 +933,13 @@
                 <div class="d-flex justify-content-center mt-3">
                     <a
                     class="btn btn-square btn-primary mx-1"
-                    href="www.linkedin.com/in/
+                    href="https://www.linkedin.com/in/
                     cameron-courtois-1976a41a4"
                     ><i class="fab fa-linkedin"></i
                     ></a>
                     <a
                     class="btn btn-square btn-primary mx-1"
-                    href="https://github.com/maggiestewart"
+                    href="https://github.com/camcourtois"
                     ><i class="fab fa-github"></i
                     ></a>
                 </div>
@@ -985,7 +989,7 @@
                   <img class="img-fluid" src="img/Michael_Carroll.jpg" alt="" />
                 </div>
                 <h5 class="mb-0">Michael Carroll</h5>
-                <small>Backend and Database Developer</small>
+                <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
                   <a class="btn btn-square btn-primary mx-1" 
                   href="https://www.linkedin.com/in/michael-carroll-0a4a14254/"
@@ -1004,7 +1008,7 @@
                   <img class="img-fluid" src="img/josh.jpg" alt="" />
                 </div>
                 <h5 class="mb-0">Joshua McCain</h5>
-                <small>Backend and Database Developer</small>
+                <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
                   <a class="btn btn-square btn-primary mx-1" 
                   href="https://www.linkedin.com/in/joshua-mccain-665862264/"
