styling addition/ tweaks; updated template pictures

--- a/index.html
+++ b/index.html
@@ -93,12 +93,17 @@
             <div class="row align-items-center g-5">
               <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-3 text-white animated slideInLeft">
-                   Welcome! <br />
+                  Welcome! <br />
                 </h1>
-                <p class="text-white animated slideInLeft mb-4 pb-2">
-                  Join us on our culinary journey and discover the flavors of the world right here in our cozy restaurant.
-                  From classic dishes to contemporary creations, each item on our menu is a testament to our dedication to providing our
-                  customers with the best culinary experience possible.
+                <p
+                  style="font-size: 23px"
+                  class="text-white animated slideInLeft mb-4 pb-2"
+                >
+                  Join us on our culinary journey and discover the flavors of
+                  the world right here in our cozy restaurant. From classic
+                  dishes to contemporary creations, each item on our menu is a
+                  testament to our dedication to providing our customers with
+                  the best culinary experience possible.
                 </p>
               </div>
               <div class="col-lg-6 text-center text-lg-end overflow-hidden">
@@ -114,16 +119,16 @@
       <div id="service">
         <div class="container-xxl py-5">
           <div class="container">
-            <div class="row g-4">
+            <div style="font-size: 19px" class="row g-4">
               <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded pt-3">
                   <div class="p-4">
                     <i class="fa fa-3x fa-user-tie text-primary mb-4"></i>
                     <h5>Master Chefs</h5>
                     <p>
-                      Our chefs bring unique flair and expertise to
-                      the kitchen, crafting delicious and unforgettable dishes
-                      that keep customers coming back
+                      Our chefs bring unique flair and expertise to the kitchen,
+                      crafting delicious and unforgettable dishes that keep
+                      customers coming back
                     </p>
                   </div>
                 </div>
@@ -134,8 +139,9 @@
                     <i class="fa fa-3x fa-utensils text-primary mb-4"></i>
                     <h5>Quality Food</h5>
                     <p>
-                      Using only the freshest and finest ingredients, sourced from local and premium
-                      suppliers, to ensure that every dish is of the highest quality
+                      Using only the freshest and finest ingredients, sourced
+                      from local and premium suppliers, to ensure that every
+                      dish is of the highest quality
                     </p>
                   </div>
                 </div>
@@ -146,8 +152,9 @@
                     <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
                     <h5>Online Order</h5>
                     <p>
-                      Enjoy your favorite international dishes from the comfort of your home
-                      or office with our simple online ordering system
+                      Enjoy your favorite international dishes from the comfort
+                      of your home or office with our simple online ordering
+                      system
                     </p>
                   </div>
                 </div>
@@ -158,8 +165,9 @@
                     <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                     <h5>24/7 Service</h5>
                     <p>
-                      Our customer support team is available 24/7 to answer any of your questions
-                      or concerns about our products and orders
+                      Our customer support team is available 24/7 to answer any
+                      of your questions or concerns about our products and
+                      orders
                     </p>
                   </div>
                 </div>
@@ -180,14 +188,14 @@
                   <img
                     class="img-fluid rounded w-100 wow zoomIn"
                     data-wow-delay="0.1s"
-                    src="img/about-1.jpg"
+                    src="img/mealsFromDB/Mediterranean-Salad.jpeg"
                   />
                 </div>
                 <div class="col-6 text-start">
                   <img
                     class="img-fluid rounded w-75 wow zoomIn"
                     data-wow-delay="0.3s"
-                    src="img/about-2.jpg"
+                    src="img/mealsFromDB/hamburger.jpg"
                     style="margin-top: 25%"
                   />
                 </div>
@@ -195,14 +203,14 @@
                   <img
                     class="img-fluid rounded w-75 wow zoomIn"
                     data-wow-delay="0.5s"
-                    src="img/about-3.jpg"
+                    src="img/mealsFromDB/Pad-Thai_-1.jpg"
                   />
                 </div>
                 <div class="col-6 text-end">
                   <img
                     class="img-fluid rounded w-100 wow zoomIn"
                     data-wow-delay="0.7s"
-                    src="img/about-4.jpg"
+                    src="img/mealsFromDB/Spaghetti-and-Meatballs.jpg"
                   />
                 </div>
               </div>
@@ -213,21 +221,24 @@
               >
                 About Us
               </h5>
-              <h1 class="mb-4">
-                Welcome to Bytes Abroad
-              </h1>
+              <h1 class="mb-4">Welcome to Bytes Abroad</h1>
               <p class="mb-4">
-                We are a team of passionate chefs and culinary experts, dedicated to providing our customers with a unique
-                and unforgettable dining experience. Our menu offers a diverse range of international flavors and dishes,
-                carefully crafted with the freshest and highest quality ingredients.
+                We are a team of passionate chefs and culinary experts,
+                dedicated to providing our customers with a unique and
+                unforgettable dining experience. Our menu offers a diverse range
+                of international flavors and dishes, carefully crafted with the
+                freshest and highest quality ingredients.
               </p>
               <p class="mb-4">
-                We pride ourselves on our commitment to quality and consistency, ensuring that every dish is prepared to
-                perfection and meets the expectations of our diners. Whatever your cravings are, our team of
-                chefs will create a culinary masterpiece that will satisfy your taste buds.
+                We pride ourselves on our commitment to quality and consistency,
+                ensuring that every dish is prepared to perfection and meets the
+                expectations of our diners. Whatever your cravings are, our team
+                of chefs will create a culinary masterpiece that will satisfy
+                your taste buds.
               </p>
               <p class="mb-4">
-                Thank you for choosing Bytes Abroad. We look forward to serving you and providing you with an unforgettable culinary experience.
+                Thank you for choosing Bytes Abroad. We look forward to serving
+                you and providing you with an unforgettable culinary experience.
               </p>
 
               <div class="row g-4 mb-4">
@@ -931,17 +942,17 @@
                 <h5 class="mb-0">Cameron Courtois</h5>
                 <small>Mockups & Frontend Web Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                    <a
+                  <a
                     class="btn btn-square btn-primary mx-1"
                     href="https://www.linkedin.com/in/
                     cameron-courtois-1976a41a4"
                     ><i class="fab fa-linkedin"></i
-                    ></a>
-                    <a
+                  ></a>
+                  <a
                     class="btn btn-square btn-primary mx-1"
                     href="https://github.com/camcourtois"
                     ><i class="fab fa-github"></i
-                    ></a>
+                  ></a>
                 </div>
               </div>
             </div>
@@ -953,12 +964,14 @@
                 <h5 class="mb-0">Jack Maumus</h5>
                 <small>UI/UX Design</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://www.linkedin.com/in/jackmaumus"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/jackmaumus"
                     ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://github.com/Jack-Maumus"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/Jack-Maumus"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
@@ -972,12 +985,14 @@
                 <h5 class="mb-0">Kyle McCraine</h5>
                 <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://www.linkedin.com/in/kyle-mccraine-723890215"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/kyle-mccraine-723890215"
                     ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://github.com/Kcmac012"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/Kcmac012"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
@@ -991,12 +1006,14 @@
                 <h5 class="mb-0">Michael Carroll</h5>
                 <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://www.linkedin.com/in/michael-carroll-0a4a14254/"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/michael-carroll-0a4a14254/"
                     ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://github.com/mikechi702"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/mikechi702"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
@@ -1010,12 +1027,14 @@
                 <h5 class="mb-0">Joshua McCain</h5>
                 <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" 
-                  href="https://www.linkedin.com/in/joshua-mccain-665862264/"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/joshua-mccain-665862264/"
                     ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1"
-                  href="https://github.com/Joshua-McCain"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/Joshua-McCain"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
@@ -1029,10 +1048,14 @@
                 <h5 class="mb-0">Olivia Cheung</h5>
                 <small>UI/UX Design</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" href="https://www.linkedin.com/in/o-cheung/"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/o-cheung/"
                     ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" href="https://github.com/Olivia-Cheung"
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/Olivia-Cheung"
                     ><i class="fab fa-github"></i
                   ></a>
                 </div>
@@ -1046,11 +1069,15 @@
                 <h5 class="mb-0">Dustin Wleczyk</h5>
                 <small>Backend & Database Developer</small>
                 <div class="d-flex justify-content-center mt-3">
-                  <a class="btn btn-square btn-primary mx-1" href="https://www.linkedin.com/in/dustinwleczyk/"
-                  ><i class="fab fa-linkedin"></i
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://www.linkedin.com/in/dustinwleczyk/"
+                    ><i class="fab fa-linkedin"></i
                   ></a>
-                  <a class="btn btn-square btn-primary mx-1" href="https://github.com/Dustin-Wleczyk"
-                  ><i class="fab fa-github"></i
+                  <a
+                    class="btn btn-square btn-primary mx-1"
+                    href="https://github.com/Dustin-Wleczyk"
+                    ><i class="fab fa-github"></i
                   ></a>
                 </div>
               </div>
@@ -1119,7 +1146,7 @@
               >
                 Merch
               </h4>
-              <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+              <p>Coming Soon!</p>
             </div>
           </div>
         </div>
