button redirect to cart page
can totally be removed, but turns the online order button into a redirect to access a page intended to display what is currently in the user's cart

--- a/index.html
+++ b/index.html
@@ -147,17 +147,21 @@
                 </div>
               </div>
               <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="service-item rounded pt-3">
-                  <div class="p-4">
-                    <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
-                    <h5>Online Order</h5>
-                    <p>
-                      Enjoy your favorite international dishes from the comfort
-                      of your home or office with our simple online ordering
-                      system
-                    </p>
-                  </div>
-                </div>
+                <a href="cart.html">
+                  <button style="border: none; background-color: white">
+                    <div class="service-item rounded pt-3">
+                      <div class="p-4">
+                        <i class="fa fa-3x fa-cart-plus text-primary mb-4"></i>
+                        <h5>Online Order</h5>
+                        <p>
+                          Enjoy your favorite international dishes from the
+                          comfort of your home or office with our simple online
+                          ordering system
+                        </p>
+                      </div>
+                    </div>
+                  </button>
+                </a>
               </div>
               <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="service-item rounded pt-3">
